--- a/html/sidebard.html
+++ b/html/sidebard.html
@@ -30,7 +30,7 @@
                     <i class="fas fa-clipboard-list text-secondary"></i>
                     Inventaire et Plan
                 </a>
-                <a href="parametres.php"><i class="fas fa-cogs"></i>
+                <a href="parametres.html"><i class="fas fa-cogs"></i>
                         Paramètres</a>
             </nav>
             <button id="logout-btn">
