--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -164,7 +164,7 @@
                                 laitiers</option>
                             <option value="Céréales">Céréales</option>
                             <option value="Boissons">Boissons</option>
-                            <option value="Équipements">Équipements</option>
+                            <option value="Fruits">Fruits</option>
                         </select>
 
                         <button type="submit">Ajouter</button>
