--- a/html/parametres.html
+++ b/html/parametres.html
@@ -57,7 +57,18 @@
                                 checked /> Alerte péremption</label>
                     </div>
                 </section>
+                <section>
+                    <h2><i class="fas fa-palette"></i> Thème de l'interface</h2>
+                    <div class="form-grid">
+                        <label for="theme-select">Mode d'affichage</label>
+                        <select name="theme" id="theme-select">
+                            <option value="clair">Clair</option>
+                            <option value="sombre">Sombre</option>
+                            <option value="bleu">Bleu nuit</option>
+                        </select>
 
+                    </div>
+                </section>
                 <button type="submit" id="save-btn"><i class="fas fa-save"></i>
                     Enregistrer</button>
             </form>
