--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -113,12 +113,12 @@
             <input type="text" id="search"
                 placeholder="Recheche un produit">
 
-            <div style="margin-bottom:10px;">
-                <strong>Légende :</strong>
-                <span class="pastille alert">❌ Périmé</span>
-                <span class="pastille warn">⏰ Bientôt (≤ 7j)</span>
-                <span class="pastille ok">✅ OK</span>
-            </div>
+                <div style="margin-bottom:10px;">
+                    <strong>Légende :</strong>
+                    <span class="pastille alert"><i class="fas fa-ban" style="color:red;"></i> Périmé</span>
+                    <span class="pastille warn"><i class="fas fa-clock" style="color:orange;"></i> Bientôt (≤ 7j)</span>
+                    <span class="pastille ok"><i class="fas fa-check-circle" style="color:green;"></i> OK</span>
+                </div>
             <table id="rapport_stock">
                 <thead>
                     <tr>
