--- a/html/acceuil.html
+++ b/html/acceuil.html
@@ -36,12 +36,14 @@
                     <div class="stat-card alert">
                         <i class="fas fa-exclamation-triangle"></i>
                         <span id="produits-critique">--</span> Critiques
+                        <ul id="liste-critique"></ul>
                     </div>
 
                     <!-- ⏰ Produits périmés -->
                     <div class="stat-card warn">
                         <i class="fas fa-clock"></i>
                         <span id="peremption">--</span> Périmés/Bientôt
+                        <ul id="liste-peremption"></ul>
                     </div>
 
                     <!-- 🚚 Fournisseurs -->
@@ -66,7 +68,7 @@
                 <!-- 🔔 Notifications -->
                 <div class="notifications">
                     <h3><i class="fas fa-bell"></i> Notifications</h3>
-                    <ul id="notif-list"></ul>
+                    <ul id="notif-liste"></ul>
                 </div>
             </section>
 
