--- a/html/sortie.html
+++ b/html/sortie.html
@@ -41,7 +41,6 @@
             <option value="transfert">Transfert</option>
           </select>
 
-          
           <input type="datetime-local" id="date-mouvement" name="date-mouvement"
             required>
 
@@ -96,14 +95,15 @@
       <div id="rapport-container">
         <div id="rapport-content">
           <!-- Ton rapport injecté ici -->
-        </div>
-        <div class="rapport-footer">
-          <button id="print-btn">
-            <i class="fas fa-print"></i> Imprimer le rapport
-          </button>
-        </div>
-      </div>
 
+        </div>
+        <button id="imprimer-rapport-btn">
+          Imprimer le rapport
+        </button>
+      </div>
+      <div class="rapport-footer">
+      
+      </div>
       <script>
 function appliquerRestrictionsPage() {
     const role = SessionManager.get("userRole") || "invité";
