--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -165,6 +165,7 @@
                             <option value="Céréales">Céréales</option>
                             <option value="Boissons">Boissons</option>
                             <option value="Fruits">Fruits</option>
+                            <option value="viande">Viande</option>
                         </select>
 
                         <button type="submit">Ajouter</button>
